--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "websocketjs",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "websocket APIs simple package",
   "main": "websocket.js",
   "repository": {
@@ -8,7 +8,8 @@
     "url": "https://github.com/jaywcjlove/websocket.git"
   },
   "keywords": [
-    "websocket"
+    "websocket",
+    "socket"
   ],
   "author": "kenny wang",
   "license": "MIT",
