--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1"
+  },
+  "dependencies": {
+    "grunt-concurrent": "^2.0.0",
+    "grunt-nodemon": "^0.4.0",
+    "nodejs-websocket": "^1.2.1"
   }
 }
