--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "websocket",
-  "main": "websocket.js",
+  "main": "lib/websocket.js",
   "version": "1.1.1",
   "authors": [
     "jaywcjlove <398188662@qq.com>"
