--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.2",
   "description": "websocket APIs simple package",
   "main": "lib/websocket.js",
+  "scripts": {
+    "start": "grunt --inspect"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/jaywcjlove/websocket.git"
