--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "websocket APIs simple package",
   "main": "lib/websocket.js",
   "scripts": {
-    "start": "grunt"
+    "start": "grunt --force,continuing"
   },
   "repository": {
     "type": "git",
@@ -21,12 +21,13 @@
   },
   "homepage": "https://github.com/jaywcjlove/websocket",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-concurrent": "^2.0.0",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-nodemon": "^0.4.0",
+    "grunt": "^1.0.3",
+    "grunt-cli": "^1.3.2",
+    "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-jshint": "^2.0.0",
+    "grunt-contrib-uglify": "^4.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-nodemon": "^0.4.2",
     "nodejs-websocket": "^1.2.1"
   },
   "dependencies": {}
